crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_interface_inheritance.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL interface.
/// CORBA Repository-ID fuer `Base` (Spec §10.7.3.1).
pub const BASE_REPOSITORY_ID: &str = "IDL:Base:1.0";
pub trait Base: ::core::marker::Send + ::core::marker::Sync {
    /// IDL operation `ping`.
    fn ping(&self) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
}

/// Client-Stub fuer `Base` (sendet GIOP-Requests an einen Remote-Object).
pub struct BaseStub {
    /// Object-Reference (IOR) des Remote-Servants.
    pub object_ref: zerodds_corba_rust::ObjectReference,
}

impl BaseStub {
    /// Konstruiert einen Stub mit einer ObjectReference.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference) -> Self {
        Self { object_ref }
    }
}

impl Base for BaseStub {
    fn ping(&self) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "ping".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
}

/// Server-Skeleton-Dispatch fuer `Base`.
/// Wird vom POA aufgerufen wenn ein GIOP-Request mit Target-Operation
/// `Base` empfangen wird. Dispatched die Operation an den Servant.
pub fn dispatch_base(servant: &dyn Base, operation: &str, _payload: &[u8]) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "ping" => {
            // Phase-2: GIOP-Body decoden, servant.ping(...) aufrufen, Reply encoden.
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}

/// Generated by `zerodds-corba-rust` from IDL interface.
/// CORBA Repository-ID fuer `Derived` (Spec §10.7.3.1).
pub const DERIVED_REPOSITORY_ID: &str = "IDL:Derived:1.0";
pub trait Derived: Base + ::core::marker::Send + ::core::marker::Sync {
    /// IDL operation `get_id`.
    fn get_id(&self) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException>;
}

/// Client-Stub fuer `Derived` (sendet GIOP-Requests an einen Remote-Object).
pub struct DerivedStub {
    /// Object-Reference (IOR) des Remote-Servants.
    pub object_ref: zerodds_corba_rust::ObjectReference,
}

impl DerivedStub {
    /// Konstruiert einen Stub mit einer ObjectReference.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference) -> Self {
        Self { object_ref }
    }
}

impl Derived for DerivedStub {
    fn get_id(&self) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "get_id".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
}

/// Base-Inheritance: `Base`-Methoden auf `DerivedStub` (Spec §3.6).
impl Base for DerivedStub {
    fn ping(&self) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "ping".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
}

/// Server-Skeleton-Dispatch fuer `Derived`.
/// Wird vom POA aufgerufen wenn ein GIOP-Request mit Target-Operation
/// `Derived` empfangen wird. Dispatched die Operation an den Servant.
pub fn dispatch_derived(servant: &dyn Derived, operation: &str, _payload: &[u8]) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "get_id" => {
            // Phase-2: GIOP-Body decoden, servant.get_id(...) aufrufen, Reply encoden.
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}
