crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_interface_with_attribute.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL interface.
/// CORBA Repository-ID fuer `Counter` (Spec §10.7.3.1).
pub const COUNTER_REPOSITORY_ID: &str = "IDL:Counter:1.0";
pub trait Counter: ::core::marker::Send + ::core::marker::Sync {
    /// IDL attribute `count` getter.
    fn count(&self) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException>;
    /// IDL attribute `label` getter.
    fn label(&self) -> ::core::result::Result<String, zerodds_corba_rust::CorbaException>;
    /// IDL attribute `label` setter.
    fn set_label(&mut self, value: String) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
    /// IDL operation `increment`.
    fn increment(&self) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
}

/// Client-Stub fuer `Counter` (sendet GIOP-Requests an einen Remote-Object).
pub struct CounterStub {
    /// Object-Reference (IOR) des Remote-Servants.
    pub object_ref: zerodds_corba_rust::ObjectReference,
}

impl CounterStub {
    /// Konstruiert einen Stub mit einer ObjectReference.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference) -> Self {
        Self { object_ref }
    }
}

impl Counter for CounterStub {
    fn count(&self) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException> {
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: attribute `count` getter not yet wired",
        })
    }
    fn label(&self) -> ::core::result::Result<String, zerodds_corba_rust::CorbaException> {
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: attribute `label` getter not yet wired",
        })
    }
    fn set_label(&mut self, value: String) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        let _ = value;
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: attribute `label` setter not yet wired",
        })
    }
    fn increment(&self) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "increment".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
}

/// Server-Skeleton-Dispatch fuer `Counter`.
/// Wird vom POA aufgerufen wenn ein GIOP-Request mit Target-Operation
/// `Counter` empfangen wird. Dispatched die Operation an den Servant.
pub fn dispatch_counter(servant: &dyn Counter, operation: &str, _payload: &[u8]) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "_get_count" => {
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        "_get_label" => {
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        "_set_label" => {
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        "increment" => {
            // Phase-2: GIOP-Body decoden, servant.increment(...) aufrufen, Reply encoden.
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}
