crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_interface_with_inout_param.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL interface.
/// CORBA Repository-ID for `Mutator` (spec §10.7.3.1).
pub const MUTATOR_REPOSITORY_ID: &str = "IDL:Mutator:1.0";
pub trait Mutator: ::core::marker::Send + ::core::marker::Sync {
    /// IDL operation `update`.
    fn update(&self, value: &mut i32) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
    /// IDL operation `produce`.
    fn produce(&self, result: &mut i32) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
}

/// Client stub for `Mutator` (sends GIOP requests to a remote object).
pub struct MutatorStub {
    /// Object reference (IOR) of the remote servant.
    pub object_ref: zerodds_corba_rust::ObjectReference,
    /// Connection handle for sending the GIOP request.
    pub connection: ::std::sync::Arc<dyn zerodds_corba_rust::CorbaConnection + ::core::marker::Send + ::core::marker::Sync>,
}

impl MutatorStub {
    /// Constructs a stub from an ObjectReference + connection.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference, connection: ::std::sync::Arc<dyn zerodds_corba_rust::CorbaConnection + ::core::marker::Send + ::core::marker::Sync>) -> Self {
        Self { object_ref, connection }
    }
}

impl Mutator for MutatorStub {
    fn update(&self, value: &mut i32) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        let __e = zerodds_cdr::Endianness::Big;
        let mut __w = zerodds_cdr::BufferWriter::new(__e);
        <_ as zerodds_cdr::CdrEncode>::encode(&*value, &mut __w).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?;
        let (__reply, __re) = self.connection.invoke(&self.object_ref, "update", __e, &__w.into_bytes())?;
        let mut __r = zerodds_cdr::BufferReader::new(&__reply, __re);
        *value = <i32 as zerodds_cdr::CdrDecode>::decode(&mut __r).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?;
        ::core::result::Result::Ok(())
    }
    fn produce(&self, result: &mut i32) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        let __e = zerodds_cdr::Endianness::Big;
        let mut __w = zerodds_cdr::BufferWriter::new(__e);
        let (__reply, __re) = self.connection.invoke(&self.object_ref, "produce", __e, &__w.into_bytes())?;
        let mut __r = zerodds_cdr::BufferReader::new(&__reply, __re);
        *result = <i32 as zerodds_cdr::CdrDecode>::decode(&mut __r).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?;
        ::core::result::Result::Ok(())
    }
}

/// Server skeleton dispatch for `Mutator`.
/// Decodes the GIOP request body (in `__endianness`), calls the servant,
/// Encodes return + out/inout into the reply body (same order).
pub fn dispatch_mutator(servant: &dyn Mutator, operation: &str, __payload: &[u8], __endianness: zerodds_cdr::Endianness) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "update" => {
            let mut __r = zerodds_cdr::BufferReader::new(__payload, __endianness);
            let mut value = match <i32 as zerodds_cdr::CdrDecode>::decode(&mut __r) { Ok(__v) => __v, Err(_) => return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }) };
            match servant.update(&mut value) {
                ::core::result::Result::Ok(__ret) => {
                    let mut __w = zerodds_cdr::BufferWriter::new(__endianness);
                    let _ = __ret;
                    if <_ as zerodds_cdr::CdrEncode>::encode(&value, &mut __w).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                    zerodds_corba_rust::SkeletonResult::Reply(__w.into_bytes())
                }
                ::core::result::Result::Err(__exc) => zerodds_corba_rust::SkeletonResult::Exception(__exc),
            }
        }
        "produce" => {
            let mut __r = zerodds_cdr::BufferReader::new(__payload, __endianness);
            let mut result = <i32 as ::core::default::Default>::default();
            match servant.produce(&mut result) {
                ::core::result::Result::Ok(__ret) => {
                    let mut __w = zerodds_cdr::BufferWriter::new(__endianness);
                    let _ = __ret;
                    if <_ as zerodds_cdr::CdrEncode>::encode(&result, &mut __w).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                    zerodds_corba_rust::SkeletonResult::Reply(__w.into_bytes())
                }
                ::core::result::Result::Err(__exc) => zerodds_corba_rust::SkeletonResult::Exception(__exc),
            }
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}
