crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_interface_with_oneway_op.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL interface.
/// CORBA Repository-ID fuer `Logger` (Spec §10.7.3.1).
pub const LOGGER_REPOSITORY_ID: &str = "IDL:Logger:1.0";
pub trait Logger: ::core::marker::Send + ::core::marker::Sync {
    /// IDL operation `log`.
    fn log(&self, message: String) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
}

/// Client-Stub fuer `Logger` (sendet GIOP-Requests an einen Remote-Object).
pub struct LoggerStub {
    /// Object-Reference (IOR) des Remote-Servants.
    pub object_ref: zerodds_corba_rust::ObjectReference,
}

impl LoggerStub {
    /// Konstruiert einen Stub mit einer ObjectReference.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference) -> Self {
        Self { object_ref }
    }
}

impl Logger for LoggerStub {
    fn log(&self, message: String) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "log".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
}

/// Server-Skeleton-Dispatch fuer `Logger`.
/// Wird vom POA aufgerufen wenn ein GIOP-Request mit Target-Operation
/// `Logger` empfangen wird. Dispatched die Operation an den Servant.
pub fn dispatch_logger(servant: &dyn Logger, operation: &str, _payload: &[u8]) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "log" => {
            // Phase-2: GIOP-Body decoden, servant.log(...) aufrufen, Reply encoden.
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}
