crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_interface_with_raises.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL interface.
/// Exception enum for `Vault` — unifies all user exceptions referenced in `raises` lists plus the system exception (spec §3.5).
#[derive(Debug, Clone)]
pub enum VaultError {
    /// CORBA-System-Exception (BAD_OPERATION, MARSHAL, OBJECT_NOT_EXIST, ...).
    System(zerodds_corba_rust::CorbaException),
    /// User-Exception `Forbidden` (raised by `Vault`-Operations).
    Forbidden(Forbidden),
    /// User-Exception `NotFound` (raised by `Vault`-Operations).
    NotFound(NotFound),
}

/// CORBA Repository-ID for `Vault` (spec §10.7.3.1).
pub const VAULT_REPOSITORY_ID: &str = "IDL:Vault:1.0";
pub trait Vault: ::core::marker::Send + ::core::marker::Sync {
    /// IDL operation `lookup`.
    fn lookup(&self, key: String) -> ::core::result::Result<String, VaultError>;
}

/// Client stub for `Vault` (sends GIOP requests to a remote object).
pub struct VaultStub {
    /// Object reference (IOR) of the remote servant.
    pub object_ref: zerodds_corba_rust::ObjectReference,
    /// Connection handle for sending the GIOP request.
    pub connection: ::std::sync::Arc<dyn zerodds_corba_rust::CorbaConnection + ::core::marker::Send + ::core::marker::Sync>,
}

impl VaultStub {
    /// Constructs a stub from an ObjectReference + connection.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference, connection: ::std::sync::Arc<dyn zerodds_corba_rust::CorbaConnection + ::core::marker::Send + ::core::marker::Sync>) -> Self {
        Self { object_ref, connection }
    }
}

impl Vault for VaultStub {
    fn lookup(&self, key: String) -> ::core::result::Result<String, VaultError> {
        let __e = zerodds_cdr::Endianness::Big;
        let mut __w = zerodds_cdr::BufferWriter::new(__e);
        <_ as zerodds_cdr::CdrEncode>::encode(&key, &mut __w).map_err(|_| VaultError::System(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }))?;
        let (__reply, __re) = match self.connection.invoke(&self.object_ref, "lookup", __e, &__w.into_bytes()) {
            ::core::result::Result::Ok(__v) => __v,
            ::core::result::Result::Err(zerodds_corba_rust::CorbaException::UserException { repository_id: __rid, body: __body, endianness: __xe }) => {
                if __rid == "IDL:NotFound:1.0" {
                    let mut __xr = zerodds_cdr::BufferReader::new(&__body, __xe);
                    let _ = __xr.read_string();
                    return match <NotFound as zerodds_cdr::CdrDecode>::decode(&mut __xr) {
                        ::core::result::Result::Ok(__exc) => ::core::result::Result::Err(VaultError::NotFound(__exc)),
                        ::core::result::Result::Err(_) => ::core::result::Result::Err(VaultError::System(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })),
                    };
                }
                if __rid == "IDL:Forbidden:1.0" {
                    let mut __xr = zerodds_cdr::BufferReader::new(&__body, __xe);
                    let _ = __xr.read_string();
                    return match <Forbidden as zerodds_cdr::CdrDecode>::decode(&mut __xr) {
                        ::core::result::Result::Ok(__exc) => ::core::result::Result::Err(VaultError::Forbidden(__exc)),
                        ::core::result::Result::Err(_) => ::core::result::Result::Err(VaultError::System(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })),
                    };
                }
                return ::core::result::Result::Err(VaultError::System(zerodds_corba_rust::CorbaException::UserException { repository_id: __rid, body: __body, endianness: __xe }));
            }
            ::core::result::Result::Err(__other) => return ::core::result::Result::Err(VaultError::System(__other)),
        };
        let mut __r = zerodds_cdr::BufferReader::new(&__reply, __re);
        let __ret = <String as zerodds_cdr::CdrDecode>::decode(&mut __r).map_err(|_| VaultError::System(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }))?;
        ::core::result::Result::Ok(__ret)
    }
}

/// Server skeleton dispatch for `Vault`.
/// Decodes the GIOP request body (in `__endianness`), calls the servant,
/// Encodes return + out/inout into the reply body (same order).
pub fn dispatch_vault(servant: &dyn Vault, operation: &str, __payload: &[u8], __endianness: zerodds_cdr::Endianness) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "lookup" => {
            let mut __r = zerodds_cdr::BufferReader::new(__payload, __endianness);
            let key = match <String as zerodds_cdr::CdrDecode>::decode(&mut __r) { Ok(__v) => __v, Err(_) => return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }) };
            match servant.lookup(key) {
                ::core::result::Result::Ok(__ret) => {
                    let mut __w = zerodds_cdr::BufferWriter::new(__endianness);
                    if <_ as zerodds_cdr::CdrEncode>::encode(&__ret, &mut __w).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                    zerodds_corba_rust::SkeletonResult::Reply(__w.into_bytes())
                }
                ::core::result::Result::Err(__err) => match __err {
                    VaultError::System(__e) => zerodds_corba_rust::SkeletonResult::Exception(__e),
                    VaultError::NotFound(__exc) => {
                        let mut __xw = zerodds_cdr::BufferWriter::new(__endianness);
                        if __xw.write_string("IDL:NotFound:1.0").is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                        if <_ as zerodds_cdr::CdrEncode>::encode(&__exc, &mut __xw).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                        zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::UserException { repository_id: "IDL:NotFound:1.0".to_string(), body: __xw.into_bytes(), endianness: __endianness })
                    }
                    VaultError::Forbidden(__exc) => {
                        let mut __xw = zerodds_cdr::BufferWriter::new(__endianness);
                        if __xw.write_string("IDL:Forbidden:1.0").is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                        if <_ as zerodds_cdr::CdrEncode>::encode(&__exc, &mut __xw).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                        zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::UserException { repository_id: "IDL:Forbidden:1.0".to_string(), body: __xw.into_bytes(), endianness: __endianness })
                    }
                    _ => zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }),
                },
            }
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}
