crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_module_with_interface.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

pub mod finance {
    /// Generated by `zerodds-corba-rust` from IDL interface.
    /// CORBA Repository-ID for `Account` (spec §10.7.3.1).
    pub const ACCOUNT_REPOSITORY_ID: &str = "IDL:Account:1.0";
    pub trait Account: ::core::marker::Send + ::core::marker::Sync {
        /// IDL attribute `balance` getter.
        fn balance(&self) -> ::core::result::Result<f64, zerodds_corba_rust::CorbaException>;
        /// IDL attribute `balance` setter.
        fn set_balance(&self, value: f64) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException>;
        /// IDL operation `withdraw`.
        fn withdraw(&self, amount: f64) -> ::core::result::Result<f64, zerodds_corba_rust::CorbaException>;
    }

    /// Client stub for `Account` (sends GIOP requests to a remote object).
    pub struct AccountStub {
        /// Object reference (IOR) of the remote servant.
        pub object_ref: zerodds_corba_rust::ObjectReference,
        /// Connection handle for sending the GIOP request.
        pub connection: ::std::sync::Arc<dyn zerodds_corba_rust::CorbaConnection + ::core::marker::Send + ::core::marker::Sync>,
    }

    impl AccountStub {
        /// Constructs a stub from an ObjectReference + connection.
        #[must_use]
        pub fn new(object_ref: zerodds_corba_rust::ObjectReference, connection: ::std::sync::Arc<dyn zerodds_corba_rust::CorbaConnection + ::core::marker::Send + ::core::marker::Sync>) -> Self {
            Self { object_ref, connection }
        }
    }

    impl Account for AccountStub {
        fn balance(&self) -> ::core::result::Result<f64, zerodds_corba_rust::CorbaException> {
            let __e = zerodds_cdr::Endianness::Big;
            let __w = zerodds_cdr::BufferWriter::new(__e);
            let (__reply, __re) = self.connection.invoke(&self.object_ref, "_get_balance", __e, &__w.into_bytes())?;
            let mut __r = zerodds_cdr::BufferReader::new(&__reply, __re);
            ::core::result::Result::Ok(<f64 as zerodds_cdr::CdrDecode>::decode(&mut __r).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?)
        }
        fn set_balance(&self, value: f64) -> ::core::result::Result<(), zerodds_corba_rust::CorbaException> {
            let __e = zerodds_cdr::Endianness::Big;
            let mut __w = zerodds_cdr::BufferWriter::new(__e);
            <_ as zerodds_cdr::CdrEncode>::encode(&value, &mut __w).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?;
            self.connection.invoke(&self.object_ref, "_set_balance", __e, &__w.into_bytes())?;
            ::core::result::Result::Ok(())
        }
        fn withdraw(&self, amount: f64) -> ::core::result::Result<f64, zerodds_corba_rust::CorbaException> {
            let __e = zerodds_cdr::Endianness::Big;
            let mut __w = zerodds_cdr::BufferWriter::new(__e);
            <_ as zerodds_cdr::CdrEncode>::encode(&amount, &mut __w).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?;
            let (__reply, __re) = self.connection.invoke(&self.object_ref, "withdraw", __e, &__w.into_bytes())?;
            let mut __r = zerodds_cdr::BufferReader::new(&__reply, __re);
            let __ret = <f64 as zerodds_cdr::CdrDecode>::decode(&mut __r).map_err(|_| zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" })?;
            ::core::result::Result::Ok(__ret)
        }
    }

    /// Server skeleton dispatch for `Account`.
    /// Decodes the GIOP request body (in `__endianness`), calls the servant,
    /// Encodes return + out/inout into the reply body (same order).
    pub fn dispatch_account(servant: &dyn Account, operation: &str, __payload: &[u8], __endianness: zerodds_cdr::Endianness) -> zerodds_corba_rust::SkeletonResult {
        match operation {
            "_get_balance" => {
                match servant.balance() {
                    ::core::result::Result::Ok(__ret) => {
                        let mut __w = zerodds_cdr::BufferWriter::new(__endianness);
                        if <_ as zerodds_cdr::CdrEncode>::encode(&__ret, &mut __w).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                        zerodds_corba_rust::SkeletonResult::Reply(__w.into_bytes())
                    }
                    ::core::result::Result::Err(__exc) => zerodds_corba_rust::SkeletonResult::Exception(__exc),
                }
            }
            "_set_balance" => {
                let mut __r = zerodds_cdr::BufferReader::new(__payload, __endianness);
                let __value = match <f64 as zerodds_cdr::CdrDecode>::decode(&mut __r) { Ok(__v) => __v, Err(_) => return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }) };
                match servant.set_balance(__value) {
                    ::core::result::Result::Ok(()) => zerodds_corba_rust::SkeletonResult::Reply(::std::vec::Vec::new()),
                    ::core::result::Result::Err(__exc) => zerodds_corba_rust::SkeletonResult::Exception(__exc),
                }
            }
            "withdraw" => {
                let mut __r = zerodds_cdr::BufferReader::new(__payload, __endianness);
                let amount = match <f64 as zerodds_cdr::CdrDecode>::decode(&mut __r) { Ok(__v) => __v, Err(_) => return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }) };
                match servant.withdraw(amount) {
                    ::core::result::Result::Ok(__ret) => {
                        let mut __w = zerodds_cdr::BufferWriter::new(__endianness);
                        if <_ as zerodds_cdr::CdrEncode>::encode(&__ret, &mut __w).is_err() { return zerodds_corba_rust::SkeletonResult::Exception(zerodds_corba_rust::CorbaException::SystemException { minor: 0u32, message: "CORBA MARSHAL: CDR error" }); }
                        zerodds_corba_rust::SkeletonResult::Reply(__w.into_bytes())
                    }
                    ::core::result::Result::Err(__exc) => zerodds_corba_rust::SkeletonResult::Exception(__exc),
                }
            }
            _ => zerodds_corba_rust::SkeletonResult::BadOperation,
        }
    }

}
