crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_simple_interface.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL interface.
/// CORBA Repository-ID fuer `Calculator` (Spec §10.7.3.1).
pub const CALCULATOR_REPOSITORY_ID: &str = "IDL:Calculator:1.0";
pub trait Calculator: ::core::marker::Send + ::core::marker::Sync {
    /// IDL operation `add`.
    fn add(&self, a: i32, b: i32) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException>;
    /// IDL operation `sub`.
    fn sub(&self, a: i32, b: i32) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException>;
}

/// Client-Stub fuer `Calculator` (sendet GIOP-Requests an einen Remote-Object).
pub struct CalculatorStub {
    /// Object-Reference (IOR) des Remote-Servants.
    pub object_ref: zerodds_corba_rust::ObjectReference,
}

impl CalculatorStub {
    /// Konstruiert einen Stub mit einer ObjectReference.
    #[must_use]
    pub fn new(object_ref: zerodds_corba_rust::ObjectReference) -> Self {
        Self { object_ref }
    }
}

impl Calculator for CalculatorStub {
    fn add(&self, a: i32, b: i32) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "add".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
    fn sub(&self, a: i32, b: i32) -> ::core::result::Result<i32, zerodds_corba_rust::CorbaException> {
        // GIOP-Request: operation_name = "sub".
        // Phase-2: encode in_params + send via corba-iiop, await reply, decode.
        ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
            minor: 0,
            message: "corba-rust stub: GIOP marshalling not yet wired",
        })
    }
}

/// Server-Skeleton-Dispatch fuer `Calculator`.
/// Wird vom POA aufgerufen wenn ein GIOP-Request mit Target-Operation
/// `Calculator` empfangen wird. Dispatched die Operation an den Servant.
pub fn dispatch_calculator(servant: &dyn Calculator, operation: &str, _payload: &[u8]) -> zerodds_corba_rust::SkeletonResult {
    match operation {
        "add" => {
            // Phase-2: GIOP-Body decoden, servant.add(...) aufrufen, Reply encoden.
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        "sub" => {
            // Phase-2: GIOP-Body decoden, servant.sub(...) aufrufen, Reply encoden.
            let _ = servant;
            zerodds_corba_rust::SkeletonResult::NotYetWired
        }
        _ => zerodds_corba_rust::SkeletonResult::BadOperation,
    }
}
