crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_valuetype_with_inheritance.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL valuetype.
/// CORBA Repository-ID for valuetype `Base` (spec §10.7.3.1).
pub const BASE_REPOSITORY_ID: &str = "IDL:Base:1.0";
pub trait Base: zerodds_corba_rust::ValueBase + ::core::marker::Send + ::core::marker::Sync {
    /// State-member `version` (public=true).
    fn version(&self) -> i32;
}

/// Concrete, wire-marshallable state carrier for valuetype `Base` (§15.3.4).
#[derive(Debug, Clone, PartialEq)]
pub struct BaseValue {
    /// State-member `version`.
    pub version: i32,
}

impl zerodds_corba_rust::ValueBase for BaseValue {
    fn repository_id(&self) -> &str {
        BASE_REPOSITORY_ID
    }
}

impl zerodds_corba_rust::value_wire::ValueMarshal for BaseValue {
    fn marshal_state(&self, w: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        zerodds_cdr::CdrEncode::encode(&self.version, w)?;
        ::core::result::Result::Ok(())
    }
}

/// Registers the ValueFactory for `Base` in a `ValueRegistry` (§15.3.4 decode).
pub fn register_base_value(reg: &mut zerodds_corba_rust::value_wire::ValueRegistry) {
    reg.register(BASE_REPOSITORY_ID, ::std::boxed::Box::new(|r: &mut zerodds_cdr::BufferReader<'_>| {
        let version = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
        ::core::result::Result::Ok(::std::rc::Rc::new(BaseValue {
            version,
        }) as ::std::rc::Rc<dyn ::core::any::Any>)
    }));
}


/// Generated by `zerodds-corba-rust` from IDL valuetype.
/// CORBA Repository-ID for valuetype `Extended` (spec §10.7.3.1).
pub const EXTENDED_REPOSITORY_ID: &str = "IDL:Extended:1.0";
pub trait Extended: zerodds_corba_rust::ValueBase + ::core::marker::Send + ::core::marker::Sync + Base {
    /// State-member `name` (public=true).
    fn name(&self) -> String;
}

/// Concrete, wire-marshallable state carrier for valuetype `Extended` (§15.3.4).
#[derive(Debug, Clone, PartialEq)]
pub struct ExtendedValue {
    /// State-member `version`.
    pub version: i32,
    /// State-member `name`.
    pub name: String,
}

impl zerodds_corba_rust::ValueBase for ExtendedValue {
    fn repository_id(&self) -> &str {
        EXTENDED_REPOSITORY_ID
    }
}

impl zerodds_corba_rust::value_wire::ValueMarshal for ExtendedValue {
    fn marshal_state(&self, w: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        zerodds_cdr::CdrEncode::encode(&self.version, w)?;
        zerodds_cdr::CdrEncode::encode(&self.name, w)?;
        ::core::result::Result::Ok(())
    }
}

/// Registers the ValueFactory for `Extended` in a `ValueRegistry` (§15.3.4 decode).
pub fn register_extended_value(reg: &mut zerodds_corba_rust::value_wire::ValueRegistry) {
    reg.register(EXTENDED_REPOSITORY_ID, ::std::boxed::Box::new(|r: &mut zerodds_cdr::BufferReader<'_>| {
        let version = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
        let name = <String as zerodds_cdr::CdrDecode>::decode(r)?;
        ::core::result::Result::Ok(::std::rc::Rc::new(ExtendedValue {
            version,
            name,
        }) as ::std::rc::Rc<dyn ::core::any::Any>)
    }));
}
