crates/corba-rust/tests/snapshots/snapshot_codegen__snapshot_valuetype_with_init_factory.snap
---
source: crates/corba-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-corba-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports, unused_variables)]

/// Generated by `zerodds-corba-rust` from IDL valuetype.
/// CORBA Repository-ID fuer Valuetype `Account` (Spec §10.7.3.1).
pub const ACCOUNT_REPOSITORY_ID: &str = "IDL:Account:1.0";
pub trait Account: zerodds_corba_rust::ValueBase + ::core::marker::Send + ::core::marker::Sync {
    /// State-member `id` (public=true).
    fn id(&self) -> String;
    /// State-member `balance` (public=true).
    fn balance(&self) -> f64;
}

/// IDL `factory create` Konstruktor fuer Valuetype `Account`.
/// Phase-2 wired das an die ValueFactory-Registry; Phase-1 ist Platzhalter.
pub fn account_init_create(id: String, initial_balance: f64) -> ::core::result::Result<::std::boxed::Box<dyn Account>, zerodds_corba_rust::CorbaException> {
    let _ = id;
    let _ = initial_balance;
    ::core::result::Result::Err(zerodds_corba_rust::CorbaException::SystemException {
        minor: 0,
        message: "corba-rust: ValueFactory init not yet wired (Phase-2)",
    })
}
